add pt translate

--- a/Spider.htm
+++ b/Spider.htm
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<title>Spider</title>
 		<meta property="og:title" content="Spider">
-		<meta property="og:url" content="https://lrusso.github.io/Spider/Spider.htm">
-		<meta property="og:description" content="info@lrusso.com">
-		<meta property="og:image" content="https://lrusso.github.io/Spider/SpiderShare.png">
+		<meta property="og:url" content="https://elielmartinsbr,github.io/Spider/Spider.htm">
+		<meta property="og:description" content="info@elielmartinsbr,com">
+		<meta property="og:image" content="https://elielmartinsbr,github.io/Spider/SpiderShare.png">
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content="Spider">
 		<meta name="theme-color" content="#000000">
